# create-pattern-detector

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  PLAN.md  README.md  ROADMAP.md  V2_ROADMAP.md  package.json  pyproject.toml  requirements.txt
artifacts/: eval_r1.json  eval_r3.json  eval_v2_baseline.json
configs/: base.yaml  runpod.env.example  scraping.env.example
data/: README.md  RESUME_INSTRUCTIONS.md
docs/: checkpoint-management.md  dense-bp-vertical-training-plan.md  initial-plan.md  model-training-history.md  phase-2-vectorizer.md  phase-3-augmentations.md  phase-3-v1-status.md  phase-4-stage4-handoff.md  real-scraping.md  runpod-phase-3.md  runpod-quickstart.md  synthetic-fold-datasets.md  v2-checkpoint-metrics.md  v2-close-pair-junction-recovery.md  v5-junction-training-run.md  vertex-refiner-phase-4-runpod.md  vertex-refiner-v1-contract.md
eval_specs/: box_pleat_native_v1.json
implementation-plan/: frame-aware-junction-detector-v2.md  frame-aware-junction-detector-v3.md  high-resolution-vertex-refiner-v1.md  phase-2-deterministic-vectorizer-baseline.md  remove-guide-grid-non-crease-training.md
implementations-plans/: box-pleated-hinge-routing.md  box-pleated-synthetic-data.md  bp-crease-assignment-solver.md  bp-studio-raw-export-rca.md  rabbit-ear-fold-program-supplement.md  realistic-box-pleat-production-data.md  treemaker-derived-synthetic-data.md
reports/: 2026-07-08-v5-junction-training-run.md  junction-scorecard-baseline-tess15w-48.json  junction-scorecard-baseline-warmstart-v5-clean.json  junction-scorecard-baseline-warmstart-v5-v4-solid-geometry-replay.json  junction-scorecard-v5-step10000-clean.json  junction-scorecard-v5-step11000-clean.json  junction-scorecard-v5-step12000-clean.json  junction-scorecard-v5-step12000-v4-solid-geometry-replay.json  junction-scorecard-v5-step2000-clean.json  junction-scorecard-v5-step4000-clean.json  junction-scorecard-v5-step6000-clean.json  junction-scorecard-v5-step6000-v4-solid-geometry-replay.json  junction-scorecard-v5-step8000-clean.json
scripts/: debug_edge_tracing.py  filter_dataset.py  gradient_setup.sh  sanity_check.py  setup_python_env.sh  test_graph_extraction.py  test_graph_head_amp.py  train.py  train_graph_head.py  validate_graph_head.py  validate_pipeline.py  validate_pipeline_with_gt.py  visualize_augmentations.py  visualize_pipeline_validation.py  visualize_predictions.py
src/: __init__.py
tests/: test_box_pleat_candidates.py  test_close_pair_labels.py  test_cpline_phase3.py  test_crop_detector.py  test_gemini_cost.py  test_native_import.py  test_phase5_inference.py  test_planar_graph_builder.py  test_scraper_resume.py  test_scraping_sources.py  test_scraping_workflow.py  test_search225_dataset.py  test_stage4_diagnostics.py  test_stage4_near_endpoint_regression.py  test_stage4_vectorization.py  test_synthetic_mix_builder.py  test_v2_labels.py  test_v4_augment_mix.py  test_validation_report.py  test_vertex_refiner_contract.py  test_vertex_refiner_dataset.py  test_vertex_refiner_eval.py  test_vertex_refiner_global_merge.py  test_vertex_refiner_model.py  (+4 more)
tools/treemaker-adapter/headless/: CMakeLists.txt  treemaker-json-cli.cpp
tools/treemaker-adapter/headless/compat/: wn_compat.c
(+370 files in other folders)
